[tool.poetry]
name = "discord-connect-4"
version = "0.1.0"
description = "nnect 4."
authors = ["Zenith5720 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "^2.0.0-alpha.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
